<resources>
    <string name="app_name">File Manager</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="search_error">there is no such recipe name</string>
    <string name="clean">Clean</string>
    <string name="security">Security</string>
    <string name="files">Files</string>
    <string name="home">Home</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="view_details">View Details</string>
    <string name="see_all">See all</string>
    <string name="favorite_files">Favorite Files</string>
    <string name="recent_files">Recent Files</string>
    <string name="content_request_permission_read_all_file">Allow access to your all files can help you quickly find your photos, videos, documents and more</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="used">Used</string>
    <string name="available">Available</string>
    <string name="total">Total</string>
    <string name="apps">Apps</string>
    <string name="videos">Videos</string>
    <string name="document">Document</string>
    <string name="images">Images</string>
    <string name="audio">Audio</string>
    <string name="content_request_permission_access_setting">File Manager needs access to calculate app storage</string>
    <string name="apks">Apks</string>
    <string name="there_s_nothing_here">There\'s nothing here.</string>
    <string name="installed">Installed</string>
    <string name="sort_by">Sort by</string>
    <string name="name_a_to_z">Name A -> Z</string>
    <string name="name_z_to_a">Name Z -> A</string>
    <string name="smallest">Smallest first</string>
    <string name="largest">Largest first</string>
    <string name="newest">Newest date first</string>
    <string name="oldest">Oldest date first</string>
    <string name="uninstall">Uninstall</string>
    <string name="app_info">App info</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="path">Path</string>
    <string name="size">Size</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="file_info">File info</string>
    <string name="all">All</string>
    <string name="pdf">PDF</string>
    <string name="txt">TXT</string>
    <string name="doc">DOC</string>
    <string name="xls">XLS</string>
    <string name="ppt">PPT</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="name_your_document">New name</string>
    <string name="cancel">Cancel</string>
    <string name="folder">Folder</string>
    <string name="playlist">Playlist</string>
    <string name="time">Time</string>
    <string name="folder_info">Folder info</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="resolution">Resolution</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="search_files">Search files</string>
    <string name="file">File</string>
    <string name="default_phone_card">Default phone card</string>
    <string name="select">Select</string>
    <string name="move">Move</string>
    <string name="protect_your">Protect your private files</string>
    <string name="enter_password">Enter password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="move_to_safe_folder">Move to safe folder</string>
    <string name="security_apks">Security apks</string>
    <string name="move_out_of_safe_folder">Move out of safe folder</string>
    <string name="security_audio">Security audio</string>
    <string name="security_document">Security document</string>
    <string name="security_images">Security images</string>
    <string name="security_video">Security video</string>
    <string name="new_folder">New folder</string>
    <string name="name_folder">Name folder</string>
    <string name="move_here">Move here</string>
    <string name="unlock">Unlock</string>
    <string name="do_you_want_to_unlock_security">Do you want to unlock security?</string>
    <string name="restore">Restore</string>
    <string name="delete_all">Delete all</string>
    <string name="restore_all">Restore all</string>

</resources>