<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_menu"
        android:paddingHorizontal="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:paddingHorizontal="4dp"
            android:text="@string/unlock"
            android:textColor="@color/blue_main"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/do_you_want_to_unlock_security"
            android:maxLength="60"
            android:maxLines="1"
            android:textColor="@color/monochrome_700"
            android:textColorHint="@color/monochrome_500"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <Button
            android:id="@+id/delete"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_semibold"
            android:stateListAnimator="@null"
            android:text="@string/delete_all"
            android:textAllCaps="true"
            android:textColor="@color/pdf_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/restore"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <Button
            android:id="@+id/restore"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_semibold"
            android:stateListAnimator="@null"
            android:text="@string/restore_all"
            android:textAllCaps="true"
            android:textColor="@color/blue_main"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <Button
            android:id="@+id/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/inter_semibold"
            android:stateListAnimator="@null"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/monochrome_400"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>