<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_menu"
    android:orientation="vertical"
    android:paddingVertical="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/share"
            android:textColor="@color/monochrome_700"
            android:textSize="16sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/delete"
            android:textColor="@color/monochrome_700"
            android:textSize="16sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/move_out_of_safe_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:text="@string/move_out_of_safe_folder"
            android:textColor="@color/monochrome_700"
            android:textSize="16sp" />
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>