<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp">

            <ImageView
                android:id="@+id/img_safe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:src="@drawable/img_safe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_protect_your"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:text="@string/protect_your"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_safe" />

            <TextView
                android:id="@+id/text_enter_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:text="@string/enter_pin"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_protect_your" />

            <LinearLayout
                android:id="@+id/pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_enter_pin">

                <EditText
                    android:id="@+id/otpET1"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blue_main"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="59sp" />

                <EditText
                    android:id="@+id/otpET2"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="@color/blue_main"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="59sp" />

                <EditText
                    android:id="@+id/otpET3"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="@color/blue_main"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="59sp" />

                <EditText
                    android:id="@+id/otpET4"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="@color/blue_main"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="59sp" />

                <EditText
                    android:id="@+id/otpET5"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="@color/blue_main"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="59sp" />

                <EditText
                    android:id="@+id/otpET6"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:backgroundTint="@color/blue_main"
                    android:fontFamily="@font/inter_regular"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="1"
                    android:textSize="59sp" />
            </LinearLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/blue_third"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@id/pass" />

            <Button
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/pdf_color"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@id/login" />

            <Button
                android:id="@+id/create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/blue_third"
                android:text="@string/create"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@id/delete" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>